<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mapubiev.summerschool.uemergency.Signup">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView2"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signup"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lname"

        android:hint="@string/last_name"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/fname"
        android:hint="@string/first_name"
        android:layout_below="@+id/lname"
        android:layout_alignStart="@+id/lname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/bdate"
        android:hint="@string/birth_date"
        android:layout_above="@+id/nic_numb"
        android:layout_alignStart="@+id/fname"
        android:layout_toStartOf="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nic_numb"
        android:layout_alignStart="@+id/bdate"
        android:hint="@string/nic_no"
        android:layout_above="@+id/submit_btn"
        android:layout_alignEnd="@+id/tel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:id="@+id/submit_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/nic_numb"
        android:layout_alignStart="@+id/nic_numb"
        android:background="@color/colorPrimaryDark"
        android:onClick="getUserInput"/>

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/country"
        android:hint="@string/country"
        style="@style/Base.V7.Widget.AppCompat.AutoCompleteTextView"
        android:layout_below="@+id/fname"
        android:layout_alignEnd="@+id/fname"
        android:layout_alignStart="@+id/fname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:digits="01234567890+"
        android:ems="10"
        android:id="@+id/tel"
        android:hint="@string/telephone"
        android:layout_above="@+id/bdate"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sex"
        android:id="@+id/sex"
        android:layout_below="@+id/tel"
        android:layout_above="@+id/nic_numb"
        android:layout_alignEnd="@+id/tel"
        android:layout_toEndOf="@+id/bdate" />

</RelativeLayout>
