<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mapubiev.summerschool.uemergency.AppHome">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView4"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_label"
        android:textColor="#ffffff"
        android:id="@+id/button2"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/round_button_green"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_label"
        android:textColor="#ffffff"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button_blue"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button_label"
        android:textColor="#ffffff"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentEnd="true"
        android:background="@drawable/round_button_orange"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sante"
        android:id="@+id/textView2"
        android:layout_marginTop="42dp"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_below="@+id/button2"
        android:layout_toStartOf="@+id/checkBox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/police"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pompiers"
        android:id="@+id/textView4"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_the_one_concerned"
        android:id="@+id/checkBox"
        android:layout_marginBottom="44dp"
        android:checked="true"
        android:height="30dp"
        android:textSize="18dp"
        android:buttonTint="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
